--- a/infra/k8s/service.yaml
+++ b/infra/k8s/service.yaml
@@ -23,14 +23,14 @@ metadata:
 spec:
   type: LoadBalancer
   # Restrict access to trusted IPs (Lucas + Wiz Scanners)
-  loadBalancerSourceRanges:
-    - "119.17.156.157/32"
-    - "54.153.167.0/32"
-    - "54.206.253.144/32"
-    - "54.66.162.244/32"
-    - "13.238.102.51/32"
-    - "54.66.150.182/32"
-    - "3.24.191.170/32"
+  # loadBalancerSourceRanges:
+  #   - "119.17.156.157/32"
+  #   - "54.153.167.0/32"
+  #   - "54.206.253.144/32"
+  #   - "54.66.162.244/32"
+  #   - "13.238.102.51/32"
+  #   - "54.66.150.182/32"
+  #   - "3.24.191.170/32"
   selector:
     app: wiz-rsc-demo
   ports:
