fix: iac_config.wiz must be committed for Wiz Code scanning
- Remove iac_config.wiz from .gitignore (must be in repo for Wiz to scan)
- Update template with note about committing the file
- Generate iac_config.wiz for infrastructure/demo/

The file is still auto-generated by 'mise run init-backends' but must
be committed after generation for Wiz Code-to-Cloud mapping to work.

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@
 *.tfplan
 backend.tf
 backend.hcl
-iac_config.wiz
+# Note: iac_config.wiz is NOT ignored - it must be committed for Wiz Code-to-Cloud mapping
+# Regenerate with: mise run init-backends
 
 # Mise/fnox (local config)
 mise.local.toml
